fix overflowing content breadcrumbs

--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -5,6 +5,7 @@
 	margin-bottom: 40px;
     background: none;
     background-color: var(--primary-accent);
+    word-wrap: break-word;
 }
 
 #heading-breadcrumbs h1 {
